gobmkida/c1/crude_dragon_weakness
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/crude_dragon_weakness/src/engine/dragon.c:2524:8: error: use of undeclared identifier 'dword_4895F0'
return dword_4895F0[safety]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/crude_dragon_weakness/src/obj/1/dragon.o] Error 1
